<resources>
    <string name="app_name">OkBiometry</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="documento_hint">Ingrese su Documento</string>
    <string name="strTipoNip">Tipo de Documento</string>
    <string name="Validar">Validar</string>
    <string name="nombres">Ingrese Nombres</string>
    <string name="apellidos">Ingrese Apellidos</string>
    <string name="password">Ingrese Password</string>
    <string name="confirmar">Confirme el Password</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_fingerprint">Logueo con un toque</string>
    <string name="desc_fingerprint">Coloque la yema del dedo en el escáner para verificar su identidad</string>
    <string name="note">(El inicio de sesión con la huella dactilar hace que la aplicación inicie sesión mucho más rápido. Su dispositivo debe tener al menos una huella digital registrada en la configuración del dispositivo)</string>
    <string name="title_activity_home">Huella dactilar</string>
    <string name="activity_home_desc">Ha iniciado sesión con éxito con la autenticación de huellas dactilares</string>
    <string name="activity_home_note">Cierre y vuelva a abrir la aplicación para volver a ver la pantalla de autenticación de huellas dactilares</string>
    <string name="title_activity_voice">voice</string>
    <string name="textograbar">PRESIONE EL BOTÓN Y LUEGO REPITA EL SIGUIENTE TEXTO</string>

</resources>
